update user data and get categories

--- a/.gitignore
+++ b/.gitignore
@@ -341,7 +341,7 @@
 /venv/Lib/site-packages/pip/_vendor/urllib3/contrib/_securetransport/low_level.py
 /venv/Lib/site-packages/pip/_internal/cli/main.py
 /venv/Lib/site-packages/pip/_internal/main.py
-/main.py
+/main2.py
 /venv/Lib/site-packages/pip/_internal/cli/main_parser.py
 /venv/Lib/site-packages/pip/_vendor/urllib3/packages/backports/makefile.py
 /venv/Lib/site-packages/pip/_vendor/distlib/manifest.py
@@ -553,3 +553,289 @@
 /venv/Lib/site-packages/pip/_vendor/webencodings/x_user_defined.py
 /venv/Lib/site-packages/pip/_internal/network/xmlrpc.py
 /venv/Lib/site-packages/setuptools-51.0.0.dist-info/zip-safe
+/venv/Lib/site-packages/certifi/__init__.py
+/venv/Lib/site-packages/certifi/__main__.py
+/venv/Lib/site-packages/certifi/cacert.pem
+/venv/Lib/site-packages/certifi/core.py
+/venv/Lib/site-packages/certifi-2020.12.5.dist-info/INSTALLER
+/venv/Lib/site-packages/certifi-2020.12.5.dist-info/LICENSE
+/venv/Lib/site-packages/certifi-2020.12.5.dist-info/METADATA
+/venv/Lib/site-packages/certifi-2020.12.5.dist-info/RECORD
+/venv/Lib/site-packages/certifi-2020.12.5.dist-info/top_level.txt
+/venv/Lib/site-packages/certifi-2020.12.5.dist-info/WHEEL
+/venv/Lib/site-packages/chardet/cli/__init__.py
+/venv/Lib/site-packages/chardet/cli/chardetect.py
+/venv/Lib/site-packages/chardet/__init__.py
+/venv/Lib/site-packages/chardet/big5freq.py
+/venv/Lib/site-packages/chardet/big5prober.py
+/venv/Lib/site-packages/chardet/chardistribution.py
+/venv/Lib/site-packages/chardet/charsetgroupprober.py
+/venv/Lib/site-packages/chardet/charsetprober.py
+/venv/Lib/site-packages/chardet/codingstatemachine.py
+/venv/Lib/site-packages/chardet/compat.py
+/venv/Lib/site-packages/chardet/cp949prober.py
+/venv/Lib/site-packages/chardet/enums.py
+/venv/Lib/site-packages/chardet/escprober.py
+/venv/Lib/site-packages/chardet/escsm.py
+/venv/Lib/site-packages/chardet/eucjpprober.py
+/venv/Lib/site-packages/chardet/euckrfreq.py
+/venv/Lib/site-packages/chardet/euckrprober.py
+/venv/Lib/site-packages/chardet/euctwfreq.py
+/venv/Lib/site-packages/chardet/euctwprober.py
+/venv/Lib/site-packages/chardet/gb2312freq.py
+/venv/Lib/site-packages/chardet/gb2312prober.py
+/venv/Lib/site-packages/chardet/hebrewprober.py
+/venv/Lib/site-packages/chardet/jisfreq.py
+/venv/Lib/site-packages/chardet/jpcntx.py
+/venv/Lib/site-packages/chardet/langbulgarianmodel.py
+/venv/Lib/site-packages/chardet/langcyrillicmodel.py
+/venv/Lib/site-packages/chardet/langgreekmodel.py
+/venv/Lib/site-packages/chardet/langhebrewmodel.py
+/venv/Lib/site-packages/chardet/langhungarianmodel.py
+/venv/Lib/site-packages/chardet/langthaimodel.py
+/venv/Lib/site-packages/chardet/langturkishmodel.py
+/venv/Lib/site-packages/chardet/latin1prober.py
+/venv/Lib/site-packages/chardet/mbcharsetprober.py
+/venv/Lib/site-packages/chardet/mbcsgroupprober.py
+/venv/Lib/site-packages/chardet/mbcssm.py
+/venv/Lib/site-packages/chardet/sbcharsetprober.py
+/venv/Lib/site-packages/chardet/sbcsgroupprober.py
+/venv/Lib/site-packages/chardet/sjisprober.py
+/venv/Lib/site-packages/chardet/universaldetector.py
+/venv/Lib/site-packages/chardet/utf8prober.py
+/venv/Lib/site-packages/chardet/version.py
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/DESCRIPTION.rst
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/entry_points.txt
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/INSTALLER
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/METADATA
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/metadata.json
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/RECORD
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/top_level.txt
+/venv/Lib/site-packages/chardet-3.0.4.dist-info/WHEEL
+/venv/Lib/site-packages/idna/__init__.py
+/venv/Lib/site-packages/idna/codec.py
+/venv/Lib/site-packages/idna/compat.py
+/venv/Lib/site-packages/idna/core.py
+/venv/Lib/site-packages/idna/idnadata.py
+/venv/Lib/site-packages/idna/intranges.py
+/venv/Lib/site-packages/idna/package_data.py
+/venv/Lib/site-packages/idna/uts46data.py
+/venv/Lib/site-packages/idna-2.10.dist-info/INSTALLER
+/venv/Lib/site-packages/idna-2.10.dist-info/LICENSE.rst
+/venv/Lib/site-packages/idna-2.10.dist-info/METADATA
+/venv/Lib/site-packages/idna-2.10.dist-info/RECORD
+/venv/Lib/site-packages/idna-2.10.dist-info/top_level.txt
+/venv/Lib/site-packages/idna-2.10.dist-info/WHEEL
+/venv/Lib/site-packages/pyTelegramBotAPI-3.7.4-py3.9.egg-info/dependency_links.txt
+/venv/Lib/site-packages/pyTelegramBotAPI-3.7.4-py3.9.egg-info/installed-files.txt
+/venv/Lib/site-packages/pyTelegramBotAPI-3.7.4-py3.9.egg-info/PKG-INFO
+/venv/Lib/site-packages/pyTelegramBotAPI-3.7.4-py3.9.egg-info/requires.txt
+/venv/Lib/site-packages/pyTelegramBotAPI-3.7.4-py3.9.egg-info/SOURCES.txt
+/venv/Lib/site-packages/pyTelegramBotAPI-3.7.4-py3.9.egg-info/top_level.txt
+/venv/Lib/site-packages/requests/__init__.py
+/venv/Lib/site-packages/requests/__version__.py
+/venv/Lib/site-packages/requests/_internal_utils.py
+/venv/Lib/site-packages/requests/adapters.py
+/venv/Lib/site-packages/requests/api.py
+/venv/Lib/site-packages/requests/auth.py
+/venv/Lib/site-packages/requests/certs.py
+/venv/Lib/site-packages/requests/compat.py
+/venv/Lib/site-packages/requests/cookies.py
+/venv/Lib/site-packages/requests/exceptions.py
+/venv/Lib/site-packages/requests/help.py
+/venv/Lib/site-packages/requests/hooks.py
+/venv/Lib/site-packages/requests/models.py
+/venv/Lib/site-packages/requests/packages.py
+/venv/Lib/site-packages/requests/sessions.py
+/venv/Lib/site-packages/requests/status_codes.py
+/venv/Lib/site-packages/requests/structures.py
+/venv/Lib/site-packages/requests/utils.py
+/venv/Lib/site-packages/requests-2.25.0.dist-info/INSTALLER
+/venv/Lib/site-packages/requests-2.25.0.dist-info/LICENSE
+/venv/Lib/site-packages/requests-2.25.0.dist-info/METADATA
+/venv/Lib/site-packages/requests-2.25.0.dist-info/RECORD
+/venv/Lib/site-packages/requests-2.25.0.dist-info/top_level.txt
+/venv/Lib/site-packages/requests-2.25.0.dist-info/WHEEL
+/venv/Lib/site-packages/telebot/__init__.py
+/venv/Lib/site-packages/telebot/apihelper.py
+/venv/Lib/site-packages/telebot/handler_backends.py
+/venv/Lib/site-packages/telebot/types.py
+/venv/Lib/site-packages/telebot/util.py
+/venv/Lib/site-packages/telebot/version.py
+/venv/Lib/site-packages/urllib3/contrib/_securetransport/__init__.py
+/venv/Lib/site-packages/urllib3/contrib/_securetransport/bindings.py
+/venv/Lib/site-packages/urllib3/contrib/_securetransport/low_level.py
+/venv/Lib/site-packages/urllib3/contrib/__init__.py
+/venv/Lib/site-packages/urllib3/contrib/_appengine_environ.py
+/venv/Lib/site-packages/urllib3/contrib/appengine.py
+/venv/Lib/site-packages/urllib3/contrib/ntlmpool.py
+/venv/Lib/site-packages/urllib3/contrib/pyopenssl.py
+/venv/Lib/site-packages/urllib3/contrib/securetransport.py
+/venv/Lib/site-packages/urllib3/contrib/socks.py
+/venv/Lib/site-packages/urllib3/packages/backports/__init__.py
+/venv/Lib/site-packages/urllib3/packages/backports/makefile.py
+/venv/Lib/site-packages/urllib3/packages/ssl_match_hostname/__init__.py
+/venv/Lib/site-packages/urllib3/packages/ssl_match_hostname/_implementation.py
+/venv/Lib/site-packages/urllib3/packages/__init__.py
+/venv/Lib/site-packages/urllib3/packages/six.py
+/venv/Lib/site-packages/urllib3/util/__init__.py
+/venv/Lib/site-packages/urllib3/util/connection.py
+/venv/Lib/site-packages/urllib3/util/proxy.py
+/venv/Lib/site-packages/urllib3/util/queue.py
+/venv/Lib/site-packages/urllib3/util/request.py
+/venv/Lib/site-packages/urllib3/util/response.py
+/venv/Lib/site-packages/urllib3/util/retry.py
+/venv/Lib/site-packages/urllib3/util/ssl_.py
+/venv/Lib/site-packages/urllib3/util/ssltransport.py
+/venv/Lib/site-packages/urllib3/util/timeout.py
+/venv/Lib/site-packages/urllib3/util/url.py
+/venv/Lib/site-packages/urllib3/util/wait.py
+/venv/Lib/site-packages/urllib3/__init__.py
+/venv/Lib/site-packages/urllib3/_collections.py
+/venv/Lib/site-packages/urllib3/_version.py
+/venv/Lib/site-packages/urllib3/connection.py
+/venv/Lib/site-packages/urllib3/connectionpool.py
+/venv/Lib/site-packages/urllib3/exceptions.py
+/venv/Lib/site-packages/urllib3/fields.py
+/venv/Lib/site-packages/urllib3/filepost.py
+/venv/Lib/site-packages/urllib3/poolmanager.py
+/venv/Lib/site-packages/urllib3/request.py
+/venv/Lib/site-packages/urllib3/response.py
+/venv/Lib/site-packages/urllib3-1.26.2.dist-info/INSTALLER
+/venv/Lib/site-packages/urllib3-1.26.2.dist-info/LICENSE.txt
+/venv/Lib/site-packages/urllib3-1.26.2.dist-info/METADATA
+/venv/Lib/site-packages/urllib3-1.26.2.dist-info/RECORD
+/venv/Lib/site-packages/urllib3-1.26.2.dist-info/top_level.txt
+/venv/Lib/site-packages/urllib3-1.26.2.dist-info/WHEEL
+/venv/Scripts/chardetect.exe
+/venv/Lib/site-packages/google/protobuf/compiler/__init__.py
+/venv/Lib/site-packages/google/protobuf/compiler/plugin_pb2.py
+/venv/Lib/site-packages/google/protobuf/internal/__init__.py
+/venv/Lib/site-packages/google/protobuf/internal/api_implementation.py
+/venv/Lib/site-packages/google/protobuf/internal/containers.py
+/venv/Lib/site-packages/google/protobuf/internal/decoder.py
+/venv/Lib/site-packages/google/protobuf/internal/encoder.py
+/venv/Lib/site-packages/google/protobuf/internal/enum_type_wrapper.py
+/venv/Lib/site-packages/google/protobuf/internal/extension_dict.py
+/venv/Lib/site-packages/google/protobuf/internal/message_listener.py
+/venv/Lib/site-packages/google/protobuf/internal/python_message.py
+/venv/Lib/site-packages/google/protobuf/internal/type_checkers.py
+/venv/Lib/site-packages/google/protobuf/internal/well_known_types.py
+/venv/Lib/site-packages/google/protobuf/internal/wire_format.py
+/venv/Lib/site-packages/google/protobuf/pyext/__init__.py
+/venv/Lib/site-packages/google/protobuf/pyext/cpp_message.py
+/venv/Lib/site-packages/google/protobuf/util/__init__.py
+/venv/Lib/site-packages/google/protobuf/util/json_format_pb2.py
+/venv/Lib/site-packages/google/protobuf/util/json_format_proto3_pb2.py
+/venv/Lib/site-packages/google/protobuf/__init__.py
+/venv/Lib/site-packages/google/protobuf/any_pb2.py
+/venv/Lib/site-packages/google/protobuf/api_pb2.py
+/venv/Lib/site-packages/google/protobuf/descriptor.py
+/venv/Lib/site-packages/google/protobuf/descriptor_database.py
+/venv/Lib/site-packages/google/protobuf/descriptor_pb2.py
+/venv/Lib/site-packages/google/protobuf/descriptor_pool.py
+/venv/Lib/site-packages/google/protobuf/duration_pb2.py
+/venv/Lib/site-packages/google/protobuf/empty_pb2.py
+/venv/Lib/site-packages/google/protobuf/field_mask_pb2.py
+/venv/Lib/site-packages/google/protobuf/json_format.py
+/venv/Lib/site-packages/google/protobuf/message.py
+/venv/Lib/site-packages/google/protobuf/message_factory.py
+/venv/Lib/site-packages/google/protobuf/proto_builder.py
+/venv/Lib/site-packages/google/protobuf/reflection.py
+/venv/Lib/site-packages/google/protobuf/service.py
+/venv/Lib/site-packages/google/protobuf/service_reflection.py
+/venv/Lib/site-packages/google/protobuf/source_context_pb2.py
+/venv/Lib/site-packages/google/protobuf/struct_pb2.py
+/venv/Lib/site-packages/google/protobuf/symbol_database.py
+/venv/Lib/site-packages/google/protobuf/text_encoding.py
+/venv/Lib/site-packages/google/protobuf/text_format.py
+/venv/Lib/site-packages/google/protobuf/timestamp_pb2.py
+/venv/Lib/site-packages/google/protobuf/type_pb2.py
+/venv/Lib/site-packages/google/protobuf/wrappers_pb2.py
+/venv/Lib/site-packages/mysql/connector/django/__init__.py
+/venv/Lib/site-packages/mysql/connector/django/base.py
+/venv/Lib/site-packages/mysql/connector/django/client.py
+/venv/Lib/site-packages/mysql/connector/django/compiler.py
+/venv/Lib/site-packages/mysql/connector/django/creation.py
+/venv/Lib/site-packages/mysql/connector/django/features.py
+/venv/Lib/site-packages/mysql/connector/django/introspection.py
+/venv/Lib/site-packages/mysql/connector/django/operations.py
+/venv/Lib/site-packages/mysql/connector/django/schema.py
+/venv/Lib/site-packages/mysql/connector/django/validation.py
+/venv/Lib/site-packages/mysql/connector/locales/eng/__init__.py
+/venv/Lib/site-packages/mysql/connector/locales/eng/client_error.py
+/venv/Lib/site-packages/mysql/connector/locales/__init__.py
+/venv/Lib/site-packages/mysql/connector/__init__.py
+/venv/Lib/site-packages/mysql/connector/abstracts.py
+/venv/Lib/site-packages/mysql/connector/authentication.py
+/venv/Lib/site-packages/mysql/connector/catch23.py
+/venv/Lib/site-packages/mysql/connector/charsets.py
+/venv/Lib/site-packages/mysql/connector/connection.py
+/venv/Lib/site-packages/mysql/connector/connection_cext.py
+/venv/Lib/site-packages/mysql/connector/constants.py
+/venv/Lib/site-packages/mysql/connector/conversion.py
+/venv/Lib/site-packages/mysql/connector/cursor.py
+/venv/Lib/site-packages/mysql/connector/cursor_cext.py
+/venv/Lib/site-packages/mysql/connector/custom_types.py
+/venv/Lib/site-packages/mysql/connector/dbapi.py
+/venv/Lib/site-packages/mysql/connector/errorcode.py
+/venv/Lib/site-packages/mysql/connector/errors.py
+/venv/Lib/site-packages/mysql/connector/network.py
+/venv/Lib/site-packages/mysql/connector/optionfiles.py
+/venv/Lib/site-packages/mysql/connector/pooling.py
+/venv/Lib/site-packages/mysql/connector/protocol.py
+/venv/Lib/site-packages/mysql/connector/utils.py
+/venv/Lib/site-packages/mysql/connector/version.py
+/venv/Lib/site-packages/mysql/__init__.py
+/venv/Lib/site-packages/mysql_connector_python-8.0.22.dist-info/INSTALLER
+/venv/Lib/site-packages/mysql_connector_python-8.0.22.dist-info/LICENSE.txt
+/venv/Lib/site-packages/mysql_connector_python-8.0.22.dist-info/METADATA
+/venv/Lib/site-packages/mysql_connector_python-8.0.22.dist-info/RECORD
+/venv/Lib/site-packages/mysql_connector_python-8.0.22.dist-info/REQUESTED
+/venv/Lib/site-packages/mysql_connector_python-8.0.22.dist-info/top_level.txt
+/venv/Lib/site-packages/mysql_connector_python-8.0.22.dist-info/WHEEL
+/venv/Lib/site-packages/mysqlx/locales/eng/__init__.py
+/venv/Lib/site-packages/mysqlx/locales/eng/client_error.py
+/venv/Lib/site-packages/mysqlx/locales/__init__.py
+/venv/Lib/site-packages/mysqlx/protobuf/__init__.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_connection_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_crud_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_cursor_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_datatypes_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_expect_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_expr_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_notice_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_prepare_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_resultset_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_session_pb2.py
+/venv/Lib/site-packages/mysqlx/protobuf/mysqlx_sql_pb2.py
+/venv/Lib/site-packages/mysqlx/__init__.py
+/venv/Lib/site-packages/mysqlx/authentication.py
+/venv/Lib/site-packages/mysqlx/charsets.py
+/venv/Lib/site-packages/mysqlx/compat.py
+/venv/Lib/site-packages/mysqlx/connection.py
+/venv/Lib/site-packages/mysqlx/constants.py
+/venv/Lib/site-packages/mysqlx/crud.py
+/venv/Lib/site-packages/mysqlx/dbdoc.py
+/venv/Lib/site-packages/mysqlx/errorcode.py
+/venv/Lib/site-packages/mysqlx/errors.py
+/venv/Lib/site-packages/mysqlx/expr.py
+/venv/Lib/site-packages/mysqlx/helpers.py
+/venv/Lib/site-packages/mysqlx/protocol.py
+/venv/Lib/site-packages/mysqlx/result.py
+/venv/Lib/site-packages/mysqlx/statement.py
+/venv/Lib/site-packages/protobuf-3.14.0.dist-info/INSTALLER
+/venv/Lib/site-packages/protobuf-3.14.0.dist-info/METADATA
+/venv/Lib/site-packages/protobuf-3.14.0.dist-info/namespace_packages.txt
+/venv/Lib/site-packages/protobuf-3.14.0.dist-info/RECORD
+/venv/Lib/site-packages/protobuf-3.14.0.dist-info/top_level.txt
+/venv/Lib/site-packages/protobuf-3.14.0.dist-info/WHEEL
+/venv/Lib/site-packages/six-1.15.0.dist-info/INSTALLER
+/venv/Lib/site-packages/six-1.15.0.dist-info/LICENSE
+/venv/Lib/site-packages/six-1.15.0.dist-info/METADATA
+/venv/Lib/site-packages/six-1.15.0.dist-info/RECORD
+/venv/Lib/site-packages/six-1.15.0.dist-info/top_level.txt
+/venv/Lib/site-packages/six-1.15.0.dist-info/WHEEL
+/venv/Lib/site-packages/protobuf-3.14.0-nspkg.pth
+/venv/Lib/site-packages/six.py
